[gd_scene load_steps=4 format=3 uid="uid://c2wk2utcstiyn"]

[ext_resource type="Script" uid="uid://cc77jpsqewtw0" path="res://main.gd" id="1"]
[ext_resource type="Script" uid="uid://bgtb2uaig3ep4" path="res://graph_display.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c7sia5ln2ijsx" path="res://blank transparent.png" id="3_h2yge"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Buttons" type="VBoxContainer" parent="UI"]
visible = false
offset_left = 947.0
offset_top = 32.0
offset_right = 1057.0
offset_bottom = 215.0

[node name="AugmentinButton" type="Button" parent="UI/Buttons"]
modulate = Color(0.55, 0.35, 0.7, 1)
layout_mode = 2
text = "Augmentin"

[node name="Ceph1Button" type="Button" parent="UI/Buttons"]
modulate = Color(0.9, 0.25, 0.35, 1)
layout_mode = 2
text = "Cephalexin-1"

[node name="Ceph2Button" type="Button" parent="UI/Buttons"]
modulate = Color(0.85, 0.45, 0.2, 1)
layout_mode = 2
text = "Cephalexin-2"

[node name="TetraButton" type="Button" parent="UI/Buttons"]
modulate = Color(0.55, 0.75, 0.3, 1)
layout_mode = 2
text = "Tetracycline"

[node name="CiproButton" type="Button" parent="UI/Buttons"]
modulate = Color(0.3, 0.55, 0.9, 1)
layout_mode = 2
text = "Ciprofloxacin"

[node name="Spacer" type="Container" parent="UI/Buttons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NextGenButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Next Generation
"

[node name="TopPanel" type="PanelContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopPanel"]
layout_mode = 2

[node name="LastDoseLabel" type="Label" parent="UI/TopPanel/HBoxContainer"]
layout_mode = 2

[node name="PopulationLabel" type="Label" parent="UI/TopPanel/HBoxContainer"]
layout_mode = 2

[node name="GenerationLabel" type="Label" parent="UI/TopPanel/HBoxContainer"]
layout_mode = 2

[node name="GraphDisplay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3")

[node name="TitlePage" type="Node2D" parent="UI"]

[node name="Title" type="Label" parent="UI/TitlePage"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
offset_left = 350.0
offset_top = 162.0
offset_right = 891.0
offset_bottom = 212.0
theme_override_font_sizes/font_size = 36
text = "Antibiotic Resistance Simulator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="UI/TitlePage"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.45
anchor_right = 0.5
anchor_bottom = 0.45
offset_left = 350.0
offset_top = 291.6
offset_right = 854.0
offset_bottom = 412.6
theme_override_font_sizes/font_size = 20
text = "Watch how bacteria populations evolve resistance.
Antibiotics can be applied every 2 generations.
Each color shows resistance to a different antibiotic.
Click Start to begin."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="UI/TitlePage"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
offset_left = 576.0
offset_top = 486.0
offset_right = 709.0
offset_bottom = 517.0
text = "Start Simulation"

[node name="BlankTransparent" type="Sprite2D" parent="UI/TitlePage"]
position = Vector2(567.5, 319)
scale = Vector2(58.15, 33.100002)
texture = ExtResource("3_h2yge")

[node name="BacteriaLayer" type="Node2D" parent="."]
